test/chainsaw/tests/aim-gpu/regression/templates/service-hftoken.yaml
  env:
  - name: HF_TOKEN
    valueFrom:
      secretKeyRef:
        name: hf-token
        key: token
