test/chainsaw/tests/aim-gpu/regression/templates/chainsaw-test-header.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: ${TEST_NAME}
spec:
  description: Regression test for ${IMAGE}
  steps:
